removed old files

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <section class="hero">
             <img
-                src="images/Hero.png"
+                src="images/hero.png"
                 alt="Casale Riviera Homes"
                 class="hero-image"
             />
