Removed old files

--- a/posizione.html
+++ b/posizione.html
@@ -37,7 +37,7 @@
                 <p class="tagline">
                     Nel cuore della Riviera, vicino a tutto ciò che conta
                 </p>
-                <img src="images/map.jpg" alt="Mappa" class="image" />
+                <img src="images/mappa.jpg" alt="Mappa" class="image" />
             </div>
         </section>
         <section class="intro-section">
